<resources>

    <string name="app_name">Blueprint</string>

    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="information_label">Information</string>
    <string name="add_furniture_label">Add Furniture</string>
    <string name="add_room_label">Add Room</string>
    <string name="dimensions_label">Dimensions</string>
    <string name="submit_label">Submit</string>
    <string name="couch_label">Couch</string>
    <string name="chair_label">Chair</string>
    <string name="table_label">Table</string>
    <string name="no_room_label">No Room Specified</string>

    <string name="dialog_no_room">Error: No Room Selected/Present</string>
    <string name="dialog_go_there">Make Room</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="room_label">Room Dimensions</string>
    <string name="furniture_label"> Dimensions</string>

    <string name="username_hint">Username:</string>
    <string name="password_hint">Password:</string>
    <string name="name_hint">Name:</string>
    <string name="failed_hint">Invalid Username/Password:</string>
    <string name="select_hint">Select Type Of Furniture</string>

    <string name="length_hint">Length:</string>
    <string name="width_hint">Width:</string>
    <string name="height_hint">Height:</string>
    <string name="measure_hint">m</string>
    <string name="triple_zero_hint">0.00</string>

    <string name="view_description">View To Be Filled</string>

    <string name="action_settings">Settings</string>

</resources>
