<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_input"
        android:layout_gravity="center"
        android:hint="@string/username_hint"
        android:layout_marginTop="-50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_input"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_label"
        android:onClick="signup"
        android:layout_marginTop="30dp" />
</LinearLayout>